autopkgtest (3.17.4) UNRELEASED; urgency=medium

  * Fix --apt-pocket for apt sources with [options].

 -- Martin Pitt <mpitt@debian.org>  Tue, 13 Oct 2015 14:24:47 +0200

autopkgtest (3.17.3) unstable; urgency=medium

  * Set DEB_BUILD_OPTIONS=parallel=<#cpu> for builds and tests (as they
    sometimes build packages). (LP: #1399177)
  * If copying up files/artifacts through shared dir fails because of
    inaccessible files, fall back to piping them through the auxverb.
  * adt-build-lxc: Install dbus; a lot of software indirectly expects it
    (e. g. calling systemctl as user).
  * tools/adt-setup-vm, setup-commands/cloud-vm-setup: Purge
    libcpan-changes-perl, it breaks some Perl autopkgtests.
  * tools/adt-setup-vm, setup-commands/cloud-vm-setup: Purge git, it breaks
    Ruby's autopkgtests.
  * NullRunner.test_tmp_install: Explicitly require Json 1.0 GI version, to
    silence warning with current pygobject.

 -- Martin Pitt <mpitt@debian.org>  Tue, 06 Oct 2015 08:13:09 +0200

autopkgtest (3.17.2) unstable; urgency=medium

  * ssh-setup/nova: Use instance UUIDs instead of names after initial "nova
    boot", to avoid name collisions. (LP: #1495788)
  * adt-setup-vm: Drop "pin eth0 name" hack, this was fixed properly in
    systemd 226-2.
  * adt-setup-vm: Generalize ethernet ifupdown setup for net.ifnames.
  * adt_binaries.py: Fix resetting of testbed (regression in 3.17).

 -- Martin Pitt <mpitt@debian.org>  Sun, 20 Sep 2015 17:23:41 +0200

autopkgtest (3.17.1) unstable; urgency=medium

  * Add new private python modules to Makefile, to actually ship them.
  * tests/adt-run: Fix test regression when $ADT_TEST* are not set.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 Sep 2015 08:38:54 +0200

autopkgtest (3.17) unstable; urgency=medium

  * setup-commands/cloud-vm-setup: Provide fallback for Ubuntu 12.04 which
    does not yet have /etc/default/grub.cfg.d/.
  * adt-virt-ssh: Add --timeout-ssh option. Thanks Leo Arias for the initial